[package]
name = "modman"
version = "0.1.0"
authors = ["Tristan Zander <knavetnz@gmail.com>"]
edition = "2018"
default-run = "modman"

[dependencies]
wayland-server = { version = "0.28.2" }
slog = { version = "2.5.2" }
slog-term = { version = "2.6.0" }
slog-async = { version = "2.5.0" }
glium = { version =  "0.28.0" } 

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
branch = "master"
default-features = false
features = [ "renderer_glium", "backend_egl", "wayland_frontend", "backend_winit", "use_system_lib" ]
