[package]
name = "widow"
version = "0.1.0"
authors = ["Tristan Zander <knavetnz@gmail.com>"]
edition = "2018"
default-run = "widow"

[dependencies]
wayland-server = { version = "0.28.5" }
slog = { version = "2.7.0" }
slog-term = { version = "2.8.0" }
slog-async = { version = "2.6.0" }
glium = { version =  "0.29.0" } 

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
branch = "master"
